@@ -1,3 +1,8 @@
+2001-12-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 02629]
+	* linein.c (next_compl): completion for name including space
+
 2001-12-07  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 02633]
